01_Dev/최종 코드/rokey_ws/log/build_2026-04-16_18-03-08/day3/stdout_stderr.log
running egg_info
writing ../../build/day3/day3.egg-info/PKG-INFO
writing dependency_links to ../../build/day3/day3.egg-info/dependency_links.txt
writing entry points to ../../build/day3/day3.egg-info/entry_points.txt
writing requirements to ../../build/day3/day3.egg-info/requires.txt
writing top-level names to ../../build/day3/day3.egg-info/top_level.txt
reading manifest file '../../build/day3/day3.egg-info/SOURCES.txt'
writing manifest file '../../build/day3/day3.egg-info/SOURCES.txt'
running build
running build_py
copying day3/3_1_a_nav_to_pose.py -> /home/rokey/rokey_ws/build/day3/build/lib/day3
running install
running install_lib
copying /home/rokey/rokey_ws/build/day3/build/lib/day3/3_1_a_nav_to_pose.py -> /home/rokey/rokey_ws/install/day3/lib/python3.10/site-packages/day3
byte-compiling /home/rokey/rokey_ws/install/day3/lib/python3.10/site-packages/day3/3_1_c_follow_waypoints.py to 3_1_c_follow_waypoints.cpython-310.pyc
  File "/home/rokey/rokey_ws/install/day3/lib/python3.10/site-packages/day3/3_1_c_follow_waypoints.py", line 50
    goal_pose.append(navigator.getPoseStamped([-1.5589 1.7090], TurtleBot4Directions.EAST))
                                               ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

byte-compiling /home/rokey/rokey_ws/install/day3/lib/python3.10/site-packages/day3/3_1_a_nav_to_pose.py to 3_1_a_nav_to_pose.cpython-310.pyc
running install_data
running install_egg_info
removing '/home/rokey/rokey_ws/install/day3/lib/python3.10/site-packages/day3-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/day3/day3.egg-info to /home/rokey/rokey_ws/install/day3/lib/python3.10/site-packages/day3-0.0.0-py3.10.egg-info
running install_scripts
Installing follow_waypoints script to /home/rokey/rokey_ws/install/day3/lib/day3
Installing nav_through_poses script to /home/rokey/rokey_ws/install/day3/lib/day3
Installing nav_to_poses script to /home/rokey/rokey_ws/install/day3/lib/day3
writing list of installed files to '/home/rokey/rokey_ws/build/day3/install.log'
